# DocumentDistanceProblem

./: .gitignore  CMakeLists.txt  README.md  ccdist  distance.cc  distance.h  distance_api.h  document.cc  document.h  main.cc
api/: distance_api.cc  distance_api.h
datatest/: test.txt  test2.txt
document_distance/: CMakeLists.txt
